--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
                 <div class="teclado--botao">0</div>
             </div>
             <div class="teclado--linha">
-                <div class="teclado--botao">BRANCO</div>
-                <div class="teclado--botao">CORRIGE/div>
-                <div class="teclado--botao">CONFIRMAR</div>
+                <div class="teclado--botao botao--branco">BRANCO</div>
+                <div class="teclado--botao botao--corrige">CORRIGE</div>
+                <div class="teclado--botao botao--confirmar">CONFIRMAR</div>
             </div>
         </div>
     </div>
